--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
+    "postcss-automath": "^1.0.1",
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
     "postcss-custom-properties": "^5.0.1",
