--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-runtime": "^6.20.0",
     "chai": "^3.5.0",
     "chai-dom": "^1.4.3",
+    "classnames": "^2.2.5",
     "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
