--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.20.0",
+    "better-assert": "github:devinrhode2/better-assert-browser",
     "chai": "^3.5.0",
     "chai-dom": "^1.4.3",
     "classnames": "^2.2.5",
