--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
     "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^1.3.1",
+    "redux-actions": "^2.0.1",
+    "redux-devtools-extension": "^2.13.0",
+    "redux-logger": "^2.8.2",
+    "redux-promise": "^0.5.3",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.0",
     "url-loader": "^0.5.7",
